Improve test coverage and fix pytest configuration
- Fix pytest fixture collection issue by excluding fixtures directory
- Add tests for processor_interface.py, json_utils.py, hash_config.py, and base_service.py
- Add entity repository tests for error paths and edge cases
- Add processing service tests without mocks following project policy
- Increase overall test coverage from 84.43% to 85.00%

Signed-off-by: Jon Vestal <jonv@vestal-family.org>

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ python_functions = test_*
 pythonpath = .
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
+norecursedirs = fixtures
 addopts = 
     --strict-markers
     --strict-config
