--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "requests>=2.31.0",
     "python-dotenv>=1.0.0",
     "typing-extensions>=4.8.0",
+    "alembic>=1.16.0",
 ]
 
 [project.optional-dependencies]
